# agentic-ai-lab-booking

./: .gitignore  README.md  frontend_chatpage.py  frontend_run.py  lab_info.py  langgraph_mcp_backend.py  pyproject.toml  requirements.txt  server.py
backend/: crud_backend.py  datetest.py  db_table.py
frontend/: assign_test_doctor_page.py  create_booking_page.py  doctor_holidays_page.py  doctors_page.py  frontend_common.py  frontend_main.py  lab_holidays_page.py  lab_schedule_page.py  lab_tests_page.py  password_login_page.py  test_holidays_page.py  test_schedule_page.py
utils/: helper_booking.py  schedule_win.py
