[project]
name = "booking-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "dateparser>=1.2.2",
    "ddgs>=9.9.3",
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "fastmcp>=2.13.1",
    "httpx>=0.28.1",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=3.1.0",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "mcp>=1.21.2",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.9",
    "python-dateutil>=2.9.0.post0",
    "rapidfuzz>=3.14.3",
    "streamlit>=1.52.1",
]
